# trajectory_tracking_nav2

./: README.md
anscer_world/: package.xml  setup.cfg  setup.py
anscer_world/launch/: robot.launch.xml
anscer_world/maps/: my_map.pgm  my_map.yaml  waypoints.yaml
anscer_world/rviz/: bot_config.rviz
anscer_world/urdf/: robot.urdf.xacro
anscer_world/worlds/: anscer_bot_world.world
trajectory_op/: CMakeLists.txt  package.xml
trajectory_op/params/: nav2_params.yaml
trajectory_op/src/: traj_client.cpp  traj_pub_reader.cpp  traj_pub_saver.cpp
tutorial_interfaces/: CMakeLists.txt  package.xml
tutorial_interfaces/srv/: Saver.srv
